--- a/src/resources/CSS/Cadastro.css
+++ b/src/resources/CSS/Cadastro.css
@@ -80,13 +80,14 @@ transition: all 0.2s linear;
 }
 
 .containerr input[type="submit"]{
-width: 100%!important;
+width: 95%!important;
 cursor: pointer;  
 background: #1ebb26;
 padding: 8px 5px;
 color: #fff;
 font-size: 20px;  
 border: 1px solid #fff;   
+margin-top: 20px;
 margin-bottom: 10px;  
 text-shadow: 0 1px 1px #333;
 
