--- a/src/resources/CSS/EditarCorrente.css
+++ b/src/resources/CSS/EditarCorrente.css
@@ -71,7 +71,7 @@
     color: #fff;
     font-size: 15pt;  
     border: 1px solid #fff;   
-    margin:  30px 0px 30px 80px;  
+
     text-shadow: 0 1px 1px #333;
    
     -webkit-border-radius: 5px;
@@ -81,4 +81,25 @@
   }
   .info-container button[type="submit"]:hover{
     background: #2ae904;
+  }
+
+  @media (max-width: 767px) {
+    .info-container{
+      width: 350px;
+    }
+    .info-container h1{
+        font-size: 25pt;
+    }
+    .info-container label{
+      font-size: 12pt;
+    }
+    .info-container input[type="submit"]{
+      font-size: 13pt;   
+    }
+    .info-container input:not([type="radio"]){
+      padding: 8px;    
+    }
+    .info-container fieldset{
+      font-size: 14pt;
+    }
   }
