--- a/src/resources/CSS/Home.css
+++ b/src/resources/CSS/Home.css
@@ -16,6 +16,7 @@
   text-shadow: 0 0 0.2em rgb(255, 255, 255);
   font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 20pt;
+  margin-left: 100px;
 }
 
 .corpo-sup  h1 {
@@ -24,7 +25,8 @@
   color: white; 
   text-shadow: black 0.1em 0.1em 0.2em;
   font-family: 'Orbitron', sans-serif;
-  font-size: 30pt;
+  font-size: 35pt;
+  margin-left: 100px;
 }
 
 .card span {
@@ -141,6 +143,7 @@ background-color: #20a705;
 
 .bt_criar{
   width: 26%;
+  background: #00AB6B;
 }
 
 .bt_resgatar{
@@ -174,18 +177,18 @@ background-color: #20a705;
   background: #20a705;
 }
 
-.imagem-texto{
-  margin-bottom: 50px;
-  margin-left: 50px;
+.linha{
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 .description {
-  margin-top: 20px;
+  margin-top: 30px;
   color: rgb(0, 0, 0); 
   text-shadow: 0 0 0.2em rgb(255, 255, 255);
   font-family: 'Yanone Kaffeesatz', sans-serif;
   text-align: center;
   margin-bottom: 80px;
-  font-size: 18pt;
+  font-size: 20pt;
 }
 /* Adicione estas classes de estilo */
 .descriptiontexto-container {
@@ -199,7 +202,7 @@ background-color: #20a705;
   text-shadow: 0 0 0.2em rgb(255, 255, 255);
   font-family: 'Yanone Kaffeesatz', sans-serif;
   text-align: center;
-  font-size: 18pt;
+  font-size: 20pt;
 }
 
 
@@ -276,6 +279,36 @@ background-color: #20a705;
   color: white; 
   text-shadow: black 0.1em 0.1em 0.2em;
   font-family: 'Orbitron', sans-serif;
-  font-size: 30pt; 
+  font-size: 40pt; 
 }
 
+
+
+/* Estilos para telas pequenas (até 767px de largura) */
+@media (max-width: 767px) {
+  #gastoCard{
+    margin-left: 50px;
+    margin-top: 20px; /* Adiciona espaço entre as colunas */
+  }
+  .corpo-sup {
+    position: relative;
+    padding: 8%;
+    background: url(../img/Imagen-Home1.4.png) no-repeat center center; /* Centraliza a imagem */
+    background-size: cover; /* Garante que a imagem de fundo sempre cubra o elemento */
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+    min-height: 200px; /* Altura mínima para garantir que o texto não sobreponha os cards abaixo */
+  }
+  .corpo-sup  p {
+    margin-top: 20px;
+    font-size: 12pt;
+    margin-left: 20px;
+  }
+  
+  .corpo-sup  h1 {
+    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-left: 20px;
+  font-size: 15pt;
+  }
+}
