--- a/src/resources/CSS/HomePage.css
+++ b/src/resources/CSS/HomePage.css
@@ -51,13 +51,6 @@
     transition: width .25s ease-in-out;
   }
 
-  .card-container {
-    margin-top: 50px;
-    display: flex;
-    flex-wrap: wrap; /* Adiciona flex-wrap para que os cards quebrem para a próxima linha em telas menores */
-    justify-content: space-between; /* Espaçamento igual entre os cards */
-  }
-  
   .imge {
     width: 100%;
     height: 200px;
@@ -72,16 +65,17 @@
   width: 100%;
 
   margin-bottom: 50px;
-  margin-left: 40px;
+  margin-left: 20px;
 }
 
 .imgGastos{
   width: 70%;
-  margin-left: 200px;
+  margin-left: 120px;
 }
 
 .imgRenda{
   width: 90%;
+  margin-left: -50px;
 }
 
 
@@ -89,9 +83,39 @@
   width: 70%;
 
 }
+.info-btn {
+  background-color: #A8E6CF; /* Cor de fundo desejada */
+  border: none;
+  border-radius: 5px;
+  color: white; /* Cor do texto */
+  padding: 10px 15px;
+  transition: background-color 0.3s ease-in-out;
+  display: block; /* Para centralizar o botão */
+  margin: 0 auto; /* Para centralizar o botão */
+}
+
+.info-btn:hover {
+  background-color: #96D6B9; /* Cor de fundo desejada no hover */
+  color: white;
+}
 
 
 
+
+#gastos-section,
+#renda-section,
+#cofrinho-section,
+#relatorios-section {
+    width: 100%; /* ou o valor que você desejar */
+    padding-top: 50px;
+    padding-bottom: 50px;/* ou o valor que você desejar */
+}
+#gastos-section p,
+#renda-section p,
+#cofrinho-section p,
+#relatorios-section p{
+  margin-top: 40px;
+}
 .session-container {
   padding-left: 50px;  /* Adiciona espaçamento na borda esquerda */
   padding-right: 50px; /* Adiciona espaçamento na borda direita */
@@ -105,30 +129,33 @@
 
 /* Estilo padrão para telas grandes */
 .carousel-text {
-    font-size: 24px; 
+    font-size: 24pt; 
     /* outros estilos... */
 }
 
 /* Quando a tela tiver no máximo 992px (tela média e abaixo) */
-@media (max-width: 992px) {
-    .carousel-text {
-        font-size: 20px; 
-        /* ajuste conforme necessário */
-    }
-}
-
 /* Quando a tela tiver no máximo 768px (tela pequena e abaixo) */
 @media (max-width: 768px) {
-    .carousel-text {
-        font-size: 16px; 
+    .carousel-text h2{
+        font-size: 20pt; 
         /* ajuste conforme necessário */
+    }
+    .carousel-text p{
+      font-size: 15pt; 
+      /* ajuste conforme necessário */
+  }
+    .carrosel{
+      height: 400px;
+    }
+    .img{
+      width: 50%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .imge{
+      height: 250px;
+      object-fit: cover;
     }
 }
 
 /* Quando a tela tiver no máximo 576px (telas muito pequenas) */
-@media (max-width: 576px) {
-    .carousel-text {
-        font-size: 14px; 
-        /* ajuste conforme necessário */
-    }
-}
