--- a/src/resources/CSS/Rodape.css
+++ b/src/resources/CSS/Rodape.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap');
 /*FOOTER*/
 .main_footer { 
+
+  bottom: 0;
   background-color: #050505;
   color: #fff;
   width: 100%; /* Add this line */
