--- a/src/resources/CSS/Relatorio.css
+++ b/src/resources/CSS/Relatorio.css
@@ -110,7 +110,6 @@ progress::before {
 }
 
 .delete-button {
-  position: absolute;
   top: 5px;
   right: 10px;
   color: red;
@@ -119,4 +118,40 @@ progress::before {
 
 .backgroundGrafico{
   background-color: rgba(255, 255, 255, 0.3);
+}
+/* Estilização básica da tabela */
+.gastos-tabela {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.gastos-tabela th,
+.gastos-tabela td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.gastos-tabela th {
+  background-color: #f2f2f2;
+}
+
+/* Estilo para o botão de exclusão */
+.delete-button {
+  background-color: #ff5555;
+  color: #fff;
+  padding: 1px 1px 1px 1px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+  background-color: #ff0000;
+}
+
+/* Estilização para ícones FontAwesome, se estiverem sendo usados */
+.delete-button .fa-trash {
+  margin-right: 2px;
 }
